        ***************************************************************
        *                                                             *
        *  Changes and Developments in the ShinyItemAnalysis Package  *
        *                                                             *
        ***************************************************************

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-14. (2019-06-19) -
-------------------------------------------------------

BUG FIXING
  o Bug in Bock's nominal IRT model was fixed. ICCs are now properly
    displayed for all binary data. Error for non-displayable
    table of parameters was further improved. Tables for items are
    displayed even in case that table for all items is not.
  o DIF items are now correctly written in reports.

MAJOR UPDATES
  o Legends for multinomial and distractor plots were improved.

MINOR UPDATES
  o Authors' and contributors' details were updated.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-13. (2019-06-18) -
-------------------------------------------------------

BUG FIXING
  o Bug in Bock's nominal IRT model was fixed. ICCs are now properly
    displayed for Czech Trivia dataset. Error for non-displayable
    table of parameters was improved.
  o Bug in DistractorAnalysis was partially fixed, need to be revised.

MAJOR UPDATES
  o Reports:
      - long tables have now header on each new page
      - legend is now visible for IRT plots even when dataset consists
        of more than 50 items
  o Matching criterion in plotMultinomial() was relaxed to decrease
    size of reports.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-12. (2019-06-17) -
-------------------------------------------------------

BUG FIXING
  o Reports are now rendered even in case that multinomial model
    cannot be fitted for some items.