@@ -1,13 +1,13 @@
 Package: ShinyItemAnalysis
 Type: Package
 Title: Test and Item Analysis via Shiny
-Version: 1.3.0-13
-Date: 2019-06-18
+Version: 1.3.0-14
+Date: 2019-06-19
 Author: Patricia Martinkova [aut, cre], Adela Hladka [aut], Ondrej Leder [ctb], Jakub Houdek [ctb], Lubomir Stepanek [ctb], Tomas Jurica [ctb], Jana Vorlickova [ctb]
 Authors@R: c(person("Patricia", "Martinkova", role = c("aut", "cre"), email = "martinkova@cs.cas.cz"), person("Adela", "Hladka", role = c("aut")), person("Ondrej", "Leder", role = "ctb"), person("Jakub", "Houdek", role = "ctb"), person("Lubomir", "Stepanek", role = "ctb"), person("Tomas", "Jurica", role = "ctb"), person("Jana", "Vorlickova", role = "ctb"))
 Maintainer: Patricia Martinkova <martinkova@cs.cas.cz>
 Depends:
-    R (>= 3.5)
+    R (>= 3.4.0)
 Imports:
     corrplot,
     cowplot,
